sfClaude/force-app/main/default/objects/Event_Ticket_Type__c/Event_Ticket_Type__c.object-meta.xml
<CustomObject>
    <label>Event Ticket Type</label>
    <pluralLabel>Event Ticket Types</pluralLabel>
    <nameField>
        <label>Ticket Type Name</label>
        <type>Text</type>
    </nameField>
    <description>Defines a ticket category for a specific Event__c record. Allows each event to have its own pricing tiers and capacity limits per category (e.g. Standard, VIP, Volunteer). Sharing is Controlled by Parent via Master-Detail to Event__c.</description>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>