sfClaude/force-app/main/default/objects/Event_Ticket_Type__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>MasterDetail</type>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Ticket Types</relationshipLabel>
    <relationshipName>Ticket_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Master-Detail relationship to the parent Event__c record. Enforces cascade delete — all Ticket Types are deleted when the parent Event is deleted. This relationship also sets the OWD to Controlled by Parent.</description>
    <inlineHelpText>The event this ticket type belongs to. This field is set automatically and cannot be changed after creation.</inlineHelpText>
</CustomField>