sfClaude/force-app/main/default/objects/Event_Ticket_Type__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this ticket type is currently available for selection during registration. Inactive ticket types are hidden from the Quick Registration LWC and online booking flows. Defaults to true on creation.</description>
    <inlineHelpText>Untick to deactivate this ticket type and prevent it from appearing on registration forms. The record is retained for reporting purposes.</inlineHelpText>
</CustomField>