sfClaude/force-app/main/default/objects/Event_Ticket_Type__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Category</label>
    <type>Picklist</type>
    <required>true</required>
    <description>The category of this ticket type. Used to differentiate pricing tiers and access levels within an event. Drives registration form display and financial reporting breakdowns.</description>
    <inlineHelpText>Select the ticket category. Standard is for general admission; VIP for premium access; Sponsor for corporate sponsors; Volunteer for unpaid event helpers.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>